# xynet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Findliburing.cmake
example/: CMakeLists.txt
example/chat/: CMakeLists.txt  chat_server.cpp
example/file_transfer/: CMakeLists.txt  file_transfer.cpp
example/include/common/: server.h  websocket.h
example/pingpong/: CMakeLists.txt  pingpong_client.cpp  pingpong_server.cpp
example/simple/: CMakeLists.txt  chargen.cpp  daytime.cpp  discard.cpp  echo.cpp  echo_revised.cpp  time.cpp
example/ttcp/: CMakeLists.txt  ttcp_client.cpp  ttcp_message.h  ttcp_server.cpp
example/websocket/: CMakeLists.txt  websocket_chat.cpp  websocket_discard.cpp  websocket_echo.cpp
include/xynet/: README.md  async_operation_base.h  buffer.h  file_descriptor.h  io_service.h  stream_buffer.h
include/xynet/coroutine/: async_scope.h  awaitable_traits.h  broken_promise.h  config.h  fmap.h  is_awaitable.h  on_scope_exit.h  single_consumer_async_auto_reset_event.h  sync_wait.h  task.h  when_all.h  when_all_ready.h
include/xynet/coroutine/detail/: any.h  get_awaiter.h  is_awaiter.h  lightweight_manual_reset_event.h  remove_rvalue_reference.h  sync_wait_task.h  unwrap_reference.h  void_value.h  when_all_counter.h  when_all_ready_awaitable.h  when_all_task.h
include/xynet/detail/: async_operation.h  concepts_helper.h  endian.h  error_code.h  file_descriptor_traits.h  module_list.h  scope_guard.h  sync_operation.h  timeout_storage.h
include/xynet/file/: file.h
include/xynet/file/impl/: openat.h  preadv.h  statx.h
include/xynet/http/: http_parser.h  picohttpparser.h  websocket_frame_header.h  websocket_frame_mask.h  websocket_request_handler.h
include/xynet/log_util/: cout_sink.h
include/xynet/socket/: socket.h
include/xynet/socket/detail/: async_operation.h  throw_or_return.h
include/xynet/socket/impl/: accept.h  address.h  bind.h  close.h  connect.h  listen.h  policy.h  recv_all.h  send_all.h  setsockopt.h  shutdown.h  socket_address.h  socket_init.h  splice.h
lib/: CMakeLists.txt  io_service.cpp
test/: CMakeLists.txt  buffer_test.cpp  coroutine_test.cpp  main.cpp  playground.cpp  socket_address_test.cpp  socket_async_operation_test.cpp  socket_sync_operation_test.cpp  tcp_socket_test.cpp  websocket_frame_test.cpp
